tests/functional2/lang/set/parse-fail.err.exp
error: undefined variable 'x'
       at /pwd/in.nix:1:3:
            1| 8.x
             |   ^
            2|
